# 42-Sh

./: .gitignore  42-install.sh  AUTHORS  AUTHORS.md  Doxyfile  Makefile.am  README.md  README_8md.html  _2home_2runner_2work_242-Sh_242-Sh_2src_2execute_2utils_2builtin_8h-example.html  _2home_2runner_2work_242-Sh_242-Sh_2src_2execute_2utils_2builtin_path_8c-example.html  _2home_2user_2Documents-example.html  _8_8_2test_8sh-example.html  annotated.html  ast_8c.html  ast_8c__incl.map  ast_8c__incl.md5  ast_8h.html  ast_8h__dep__incl.map  ast_8h__dep__incl.md5  ast_8h__incl.map  ast_8h__incl.md5  ast_8h_source.html  ast__eval_8c.html  ast__eval_8c__incl.map  ast__eval_8c__incl.md5  ast__eval_8h.html  ast__eval_8h__dep__incl.map  ast__eval_8h__dep__incl.md5  ast__eval_8h__incl.map  ast__eval_8h__incl.md5  ast__eval_8h_source.html  ast__functions_8c.html  ast__functions_8c__incl.map  ast__functions_8c__incl.md5  ast__variable_8c.html  ast__variable_8c__incl.map  ast__variable_8c__incl.md5  builtin_8c.html  builtin_8c__incl.map  builtin_8c__incl.md5  (+283 more)
src/: Makefile.am  a.out  main.c
src/ast/: Makefile.am  ast.c  ast.h
src/execute/: Makefile.am  ast_eval.c  ast_eval.h  ast_variable.c  builtin.c  builtin.h  loop.c  main.c  pipeline.c  redirections.c
src/execute/hash_map/: hash.c  hash_map.c  hash_map.h
src/execute/tests/: exec_tests.c
src/execute/utils/: ast_functions.c  ast_variable.c  builtin.c  builtin.h  builtin_path.c  builtin_utils.c  environment_variable.c  environment_variable.h  loop.c  pipeline.c  redirections.c
src/io_backend/: Makefile.am  io_backend.c  io_backend.h
src/io_backend/tests/: io_backend_tests.c
src/lexer/: Makefile  Makefile.am  check  lexer.c  lexer.h  lexer_utils.c  lexer_utils2.c  lexer_utils3.c  token.h
src/lexer/tests/: lexer2_tests.c  lexer3_tests.c  lexer_tests.c
src/options/: Makefile.am  options.c  options.h
src/options/tests/: options_tests.c
src/parser/: Makefile.am  parser.c  parser.h  parser_condition.c  parser_condition.h  parser_element.c  parser_element.h  parser_functionnal.c  parser_variable.c
src/parser/tests/: parser_tests.c
tests/: .__afsFCE1  Makefile.am  test.sh  test_builder.py  testsuite.sh
tests/and_or_pipes/and/: and3.test  testsuite.sh
tests/and_or_pipes/or/: or4.test  testsuite.sh
tests/and_or_pipes/pipes/: pipe1.test  pipe2.test  pipe3.test  testsuite.sh
tests/builtin/: echo2.test  echo3.test  echo5.test  echo7.test  testsuite.sh  true_false2.test
tests/builtin/cd/: cd_complex_test1.test  cd_complex_test2.test  cd_complex_test3.test  cd_error_test1.test  cd_error_test2.test  cd_simple_test1.test  cd_simple_test2.test  cd_simple_test3.test  cd_simple_test4.test  cd_simple_test5.test  cd_simple_test6.test  cd_simple_test7.test  testsuite.sh
tests/builtin/dot/: dot_complex_test1.test  dot_complex_test2.test  dot_complex_test3.test  dot_complex_test4.test  dot_error_test1.test  dot_simple_test1.test  dot_simple_test2.test  dot_simple_test4.test  dot_simple_test5.test  test.sh  testsuite.sh
tests/builtin/echo/: echo1.test  echo10.test  echo11.test  echo12.test  echo13.test  echo14.test  echo15.test  echo16.test  echo4.test  echo6.test  echo8.test  echo9.test  echoMouli1.test  echoMouli2.test  testsuite.sh
tests/builtin/echo_error/: echo_error1.test  echo_error2.test  echo_error3.test  testsuite.sh
tests/builtin/export/: simple2.test  simple3.test  simple4.test  testsuite.sh
tests/builtin/negation/: negation1.test  negation2.test  negation3.test  negation4.test  testsuite.sh
tests/builtin/true_false/: testsuite.sh  true_false1.test  true_false3.test  true_false4.test  true_false5.test
tests/command_list/command_list/: command_list1.test  command_list2.test  command_list3.test  command_list4.test  command_list5.test  command_list6.test  command_list7.test  testsuite.sh
tests/command_list/command_list_error/: command_list_error1.test  command_list_error2.test  testsuite.sh
tests/comment/: comment1.test  comment2.test  comment3.test  comment6.test  comment7.test  comment8.test  testsuite.sh
tests/comment/comment/: comment10.test  comment4.test  comment5.test  comment9.test
tests/comment/comment_error/: comment_error1.test  testsuite.sh
tests/conditionnal/: complex_cond1.test  complex_cond2.test  complex_cond3.test  elif1.test  elif2.test  if4.test  testsuite.sh
tests/conditionnal/conditionnal/: complex_cond3.test  elif3.test  if1.test  if2.test  if3.test  testsuite.sh
tests/conditionnal/conditionnal_error/: conditionnal_error_test1.test  conditionnal_error_test2.test  conditionnal_error_test3.test  conditionnal_error_test4.test  testsuite.sh
tests/error/error_syntax/: error_syntax1.test  error_syntax10.test  error_syntax11.test  error_syntax12.test  error_syntax13.test  error_syntax2.test  error_syntax3.test  error_syntax4.test  error_syntax5.test  error_syntax6.test  error_syntax7.test  error_syntax9.test  testsuite.sh
tests/loop/loop/: loop1.test  loop2.test  loop3.test  loop4.test  loop5.test  loop6.test  loop7.test  testsuite.sh
tests/loop/loop_error/: error1.test  testsuite.sh
tests/quote/: single_quote2.test  single_quote3.test
tests/quote/double_quote/: double_quote10.test  double_quote11.test  double_quote12.test  double_quote2.test  double_quote3.test  double_quote4.test  double_quote5.test  double_quote6.test  double_quote7.test  double_quote8.test  double_quote9.test  testsuite.sh
tests/quote/double_quote_error/: double_quote_error1.test  double_quote_error2.test  double_quote_error3.test  double_quote_error4.test  double_quote_error5.test  double_quote_error6.test  double_quote_error7.test  double_quote_error8.test  (+1 more)
(+137 files in other folders)
